i make js logic

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <input type="text" class="text">
         <button class="add">Dodaj</button>
     </div>
-    <div class="notebook"></div>
+    <li class="notebook"></li>
+    <script src="app.js"></script>
 </body>
 </html>
